--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div id="home_container">
+<div id="HomeContainer">
 	<h1>Welcome to DockItDay </h1>
 	<span><%= link_to "Sign Up", new_user_registration_path %></span></br>
 	<span><%= link_to "Sign In", new_user_session_path %></span>
