--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>YourDay</title>
+  <title>DockItDay</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if user_signed_in? %>
+	<nav>
+		<ul id="nav">
+			<li><%=link_to "Sign Out", destroy_user_session_path,  :method=>'delete' %></li>
+		</ul>
+	</nav>
+	<% else %>
+	<nav>
+		<ul id ="nav">
+			<li><%= link_to "Logo Here?", root_path %></li>
+		</ul>
+<% end %>
 
 <%= yield %>
 <p class="notice"><%= notice %></p>
