--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,73 @@
  *= require_tree .
  *= require fullcalendar
  */
+
+#MainContent {
+        width: inherit;
+        height: inherit;
+        margin: 0;
+        padding: 0; }
+
+#footer {
+		margin-top: 150px;
+  		padding-top: 5px;
+		width: 100%;
+		border-top: 1px solid #ccc; }
+        
+#nav {
+		width: 100%;
+		float: left;
+		margin: 0 0 3em 0;
+		padding: 0;
+		list-style:none; 
+		border-bottom: 1px solid #ccc;
+		border-top: 1px solid #ccc; }
+#nav li {
+		float: left; }
+#nav li a {
+		display: block;
+		padding: 8px 15px; }
+
+#HomeContainer {
+		position:relative;
+		top: 150px;
+		right: -500px; }
+#HomeContainer span {
+		position: relative;
+		right: -120px; }
+		
+#SidePanel {
+		position: relative;
+		float: left;
+		height: 80%;
+		padding-left: 5px;
+		margin: 0 0 0 20px;
+		width: 190px;
+		border-right: 1px solid #ccc;
+		border-left: 1px solid #ccc; }
+
+#LeftNav {
+	position: relative;
+	padding-left: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	height: 350px;
+	width: 180px;
+	background: #F8F8FF;
+	list-style:none;  }
+	
+#NewsPanel {
+		position: relative;
+		top: 90px;
+		right: -1050px;
+		height: 10%;
+		width: 150px;
+		padding-right: 30px;
+		border-right: 1px solid #ccc;
+		border-left: 1px solid #ccc;
+		background: #F8F8FF }
+#NewsPanel p {
+		position: relative;
+		right: -15px;
+		bottom: 200px;
+		padding: 10px 10px 10px 10px; }
