--- a/app/assets/stylesheets/docket.css.scss
+++ b/app/assets/stylesheets/docket.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the docket controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#CalendarContainer {
+		width: 70%;
+		float: right;
+		position: relative;
+		overflow: hidden;
+		vertical-align: top;
+		margin-right: 90px;
+		margin-left: 20px; }
