basic docket crud done

--- a/app/views/dockets/index.html.erb
+++ b/app/views/dockets/index.html.erb
@@ -1,4 +1,8 @@
+<%= link_to 'penitin!', new_docket_path %>
 <div id="CalendarContainer">
   <div id='Calendar'>
   </div>
+  <div id="EventDialog">
+	  <div id="DocketForm"></div>
+	</div>
 </div>
